--- a/modules/completion/new-helm/README.org
+++ b/modules/completion/new-helm/README.org
@@ -22,8 +22,10 @@
 - [[#configuration][Configuration]]
   - [[#helm-mode][helm-mode]]
   - [[#helm][helm]]
+    - [[#helm-multi-files][helm-multi-files]]
   - [[#icons][Icons]]
   - [[#helm-posframe][helm-posframe]]
+  - [[#helm-projectile][helm-projectile]]
 - [[#troubleshooting][Troubleshooting]]
   - [[#known-problems][Known problems]]
 
@@ -38,7 +40,9 @@ For more info on Helm, see:
 ** Module Flags
 + =+childframe= Causes Helm to display in a floating child frame, above Emacs.
 + =+disable-helm-ff-lynx-style= Disable special action for <left>, <right> in find-file.
-+ =+fuzzy= Enables fuzzy completion for Helm searches. Recommended.
++ =+fuzzy= Enables fuzzy completion for Helm searches. Recommended. One then gets both fuzzy matching and regular helm matching. For example, try something similar to https://tuhdo.github.io/helm-intro.html#orgheadline2 where tuhdo searches for the file i5100_edac.c. You should find that this works also when fuzzy matching is enabled.
+  Helm uses emacs completion-styles. This is true even if fuzzy in not enabled.
+  For more about emacs completion-styles see https://www.masteringemacs.org/article/understanding-minibuffer-completion.
 + =+helm-find-file-at-point= Let helm handle find-file-at-point. Change introduced 2017-06-09 without any explanation. Can someone provide an example where helm's
   handling of this hurts?
 + =+helm-hide-mode-line= Hide mode line in helm windows. The mode line provides key map
@@ -217,6 +221,9 @@ If you are not an expert it is recommended to show the header line:
 (after! helm
   (setq helm-display-header-line t))
 
+*** helm-multi-files
+helm-multi-files can use locate as a source for file names. The default key binding for this now opens a keymap for helm-projectile. The key binding to switch to using locate is now "C-c L".
+
 ** Icons
 Icons are now included, and support 2 providers ([[https://github.com/domtronn/all-the-icons.el][all-the-icons]] and [[https://github.com/Alexander-Miller/treemacs][treemacs]]).
 
@@ -228,9 +235,18 @@ Have a look at helm-posframe.el, to see which variables are available to users.
 These variables can be configured from your DOOMDIR/config.el, using code similar to:
 
 (after! helm
-  (setq helm-posframe-border-width 16))
+  (when (featurep! :completion new-helm +childframe)
+    (setq helm-posframe-border-width 16)))
 
 The most important variables, available to users, are already getting an inital value in config.el in this directory. Search for "childframe" in that file.
+
+** helm-projectile
+You may want to use Helm versions of common Projectile commands.
+See: https://github.com/bbatsov/helm-projectile, section Usage.
+This can be configured in your DOOMDIR/config.el, using code similar to:
+
+(after! helm-projectile
+  (helm-projectile-on))
 
 * Troubleshooting
 
